hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_reuse_lval_5.php
<?hh

async function f() {
  concurrent {
    await genx($x++);
    await genx($x);
  }
}
